samples/v2-single-round/ruff-24616/gates/build-log.txt
   Compiling ty_server v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_server)
   Compiling mdtest v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/mdtest)
   Compiling ty_completion_bench v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_completion_bench)
   Compiling ty_wasm v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_wasm)
   Compiling ty_completion_eval v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_completion_eval)
   Compiling ty_test v0.0.0 (/private/tmp/refactor-eq-workdir/bb-merged-24616/crates/ty_test)
error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:558:41
    |
558 |     let filter = std::env::var(EnvVars::MDTEST_TEST_FILTER).ok();
    |                                         ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:649:26
    |
649 |                 EnvVars::MDTEST_TEST_FILTER,
    |                          ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

error[E0599]: no associated item named `MDTEST_TEST_FILTER` found for struct `EnvVars` in the current scope
   --> crates/ty_test/src/lib.rs:655:26
    |
655 |                 EnvVars::MDTEST_TEST_FILTER,
    |                          ^^^^^^^^^^^^^^^^^^ associated item not found in `EnvVars`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `ty_test` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
